feat: enhance ProjectEntityStub and ProjectServiceImpl with project external ID handling and validation